AC_INIT(include/attributes.h)
AC_CONFIG_HEADER(include/config.h)
AC_PREFIX_DEFAULT(/usr)

AC_ARG_ENABLE(shared,
[ --enable-shared=[yes/no] Enable use of shared libraries [default=yes]],,
	enable_shared=yes)
AC_SUBST(enable_shared)

AC_ARG_ENABLE(gettext,
[ --enable-gettext=[yes/no] Enable alternate language support [default=yes]],,
	enable_gettext=yes)
AC_SUBST(enable_gettext)

AC_PACKAGE_GLOBALS(attr)
AC_PACKAGE_UTILITIES(attr)
AC_MANUAL_FORMAT

AC_C_CONST
AC_TYPE_MODE_T
AC_FUNC_ALLOCA

AC_OUTPUT(include/builddefs)
